# taginator

./: License  README.md  setup.cfg  setup.py
docs/: documentation.MD
notes/: delay.txt  icu.txt  kubernetes.txt  meeting_rog.txt  meeting_rog_2.txt  naatu_research.txt  new_project.txt  project_new_important.txt
samples/: sample00.txt  sample01.txt  sample02.txt  sample03.txt  sample06.txt  sample08.txt  sample09.txt  sample10.txt  sample11.txt  sample12.txt  sample13.txt  sample14.txt  sample15.txt  sample4.txt  sample5.txt  sample7.txt
taginator/: __init__.py  example.py  extractor.py  helper.py  importer.py  main.py  note.py  taginator.py  viewer.py
tests/: test_basic.py  test_extractor.py
