[metadata]
name=taginator
version=0.1
description=Taginator
author=Mróz,Podsiad,Urbala,Rożek,Szypuła,Staroń

[options]
python_requires = >= 3.6
install_requires =
    gensim
    datefinder>=0.7.1
    nltk
    python-dateutil>=2.8.1

[options.packages.find]
include =
    taginator
    taginator.*

[options.entry_points]
console_scripts =
    taginator = taginator.main:main

[globals]
lint_files = setup.py taginator
